[metadata]
name = dsul
version = 0.4.0
description = Disturb State USB Light
license = MIT
repository = https://github.com/hymnis/dsul-python
authors = hymnis <hymnis@plazed.net>
readme = README.md
keywords = usb dsul led rgb
classifiers = [
  "Environment :: Console",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Other Audience",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Topic :: Utilities"]

[options]
packages = dsul
install_requires =
  configparser >= 4.0.2
  pyserial == 3.4
  PyYAML >= 5.3

[options.entry_points]
console_scripts =
  dsul-daemon = dsul.daemon:main [pyserial]
  dsul-cli = dsul.cli:main

[tool:pytest]
testpaths =
  tests
norecursedirs=dist build .tox scripts
addopts =
  --doctest-modules
  --cov-config=setup.cfg
  --cov-append
  --cov-report=xml
  --cov=dsul
  -r a
  -v
